--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description"
+        content="Her kan I se et udvalg af mine projekter fra 1. semester på KEA Multimediedesigner">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peter's Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
@@ -406,7 +407,7 @@
             <div class="footer-container slide">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.5955100354154!2d12.4940605122742!3d55.678633697589156!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253ddf4fc72bb%3A0x42eca7a6e1338380!2sPeter%20Bangs%20Vej%20152%2C%202000%20Frederiksberg!5e0!3m2!1sen!2sdk!4v1703852805827!5m2!1sen!2sdk"
-                    style="border:0;" allowfullscreen="" loading="lazy"
+                    style="border:0;" title="kort" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                 <form action="mailto:someone@example.com" method="post">
