--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@
                 <!-- Slideshow 1 CHAT GPT -->
                 <div class="slideshow-container" id="slideshow1">
                     <div class="mySlides">
-                        <img src="images/01_01.webp" alt="kode eksempel">
+                        <img loading="lazy" src="images/01_01.webp" alt="kode eksempel">
                     </div>
                     <div class="mySlides">
-                        <img src="images/01_02.webp" alt="billede eksempel">
+                        <img loading="lazy" src="images/01_02.webp" alt="billede eksempel">
                     </div>
                     <div class="mySlides">
-                        <img src="images/01_03.webp" alt="kode eksempel">
+                        <img loading="lazy" src="images/01_03.webp" alt="kode eksempel">
                     </div>
                     <div class="mySlides">
-                        <img src="images/01_04.webp" alt="kode eksempel">
+                        <img loading="lazy" src="images/01_04.webp" alt="kode eksempel">
                     </div>
                     <div class="mySlides">
-                        <img src="images/01_05.webp" alt="web p">
+                        <img loading="lazy" src="images/01_05.webp" alt="web p">
                     </div>
                     <!-- Add more slides as needed -->
 
@@ -145,13 +145,13 @@
                 <!-- Slideshow 2 CHAT GPT -->
                 <div class="slideshow-container" id="slideshow2">
                     <div class="mySlides">
-                        <img src="images/02_01.webp" alt="præsentation">
+                        <img loading="lazy" src="images/02_01.webp" alt="præsentation">
                     </div>
                     <div class="mySlides">
-                        <img src="images/02_02.webp" alt="præsentation">
+                        <img loading="lazy" src="images/02_02.webp" alt="præsentation">
                     </div>
                     <div class="mySlides">
-                        <img src="images/02_03.webp" alt="præsentation">
+                        <img loading="lazy" src="images/02_03.webp" alt="præsentation">
                     </div>
                     <!-- Add more slides as needed -->
 
@@ -184,16 +184,16 @@
                 <!-- Slideshow 3 CHAT GPT -->
                 <div class="slideshow-container" id="slideshow3">
                     <div class="mySlides">
-                        <img src="images/03_01.webp" alt="brainstorm">
+                        <img loading="lazy" src="images/03_01.webp" alt="brainstorm">
                     </div>
                     <div class="mySlides">
-                        <img src="images/03_02.webp" alt="wireframes">
+                        <img loading="lazy" src="images/03_02.webp" alt="wireframes">
                     </div>
                     <div class="mySlides">
-                        <img src="images/03_03.webp" alt="styletile">
+                        <img loading="lazy" src="images/03_03.webp" alt="styletile">
                     </div>
                     <div class="mySlides">
-                        <img src="images/03_04.webp" alt="prototype">
+                        <img loading="lazy" src="images/03_04.webp" alt="prototype">
                     </div>
                     <!-- Add more slides as needed -->
 
@@ -231,25 +231,25 @@
                 <!-- Slideshow 4 CHAT GPT -->
                 <div class="slideshow-container" id="slideshow4">
                     <div class="mySlides">
-                        <img src="images/04_01.webp" alt="spil">
+                        <img loading="lazy" src="images/04_01.webp" alt="spil">
                     </div>
                     <div class="mySlides">
-                        <img src="images/04_02.webp" alt="game over">
+                        <img loading="lazy" src="images/04_02.webp" alt="game over">
                     </div>
                     <div class="mySlides">
-                        <img src="images/04_03.webp" alt="spilskærm">
+                        <img loading="lazy" src="images/04_03.webp" alt="spilskærm">
                     </div>
                     <div class="mySlides">
-                        <img src="images/04_04.webp" alt="victory">
+                        <img loading="lazy" src="images/04_04.webp" alt="victory">
                     </div>
                     <div class="mySlides">
-                        <img src="images/04_05.webp" alt="papirsprotyper">
+                        <img loading="lazy" src="images/04_05.webp" alt="papirsprotyper">
                     </div>
                     <div class="mySlides">
-                        <img src="images/04_06.webp" alt="musik html">
+                        <img loading="lazy" src="images/04_06.webp" alt="musik html">
                     </div>
                     <div class="mySlides">
-                        <img src="images/04_07.webp" alt="aktivitetsdiagramm og state machine diagram">
+                        <img loading="lazy" src="images/04_07.webp" alt="aktivitetsdiagramm og state machine diagram">
                     </div>
                     <!-- Add more slides as needed -->
 
@@ -287,10 +287,10 @@
                 <!-- Slideshow 5 CHAT GPT -->
                 <div class="slideshow-container" id="slideshow5">
                     <div class="mySlides">
-                        <img src="images/05_01.webp" alt="adobe premiere">
+                        <img loading="lazy" src="images/05_01.webp" alt="adobe premiere">
                     </div>
                     <div class="mySlides">
-                        <img src="images/05_02.webp" alt="videosite">
+                        <img loading="lazy" src="images/05_02.webp" alt="videosite">
                     </div>
                     <!-- Add more slides as needed -->
 
@@ -323,19 +323,19 @@
                 <!-- Slideshow 6 CHAT GPT -->
                 <div class="slideshow-container" id="slideshow6">
                     <div class="mySlides">
-                        <img src="images/06_01.webp" alt="trello">
+                        <img loading="lazy" src="images/06_01.webp" alt="trello">
                     </div>
                     <div class="mySlides">
-                        <img src="images/06_02.webp" alt="github">
+                        <img loading="lazy" src="images/06_02.webp" alt="github">
                     </div>
                     <div class="mySlides">
-                        <img src="images/06_03.webp" alt="bert test">
+                        <img loading="lazy" src="images/06_03.webp" alt="bert test">
                     </div>
                     <div class="mySlides">
-                        <img src="images/06_04.webp" alt="redesign">
+                        <img loading="lazy" src="images/06_04.webp" alt="redesign">
                     </div>
                     <div class="mySlides">
-                        <img src="images/06_05.webp" alt="5 sekunders test">
+                        <img loading="lazy" src="images/06_05.webp" alt="5 sekunders test">
                     </div>
                     <!-- Add more slides as needed -->
 
@@ -374,7 +374,7 @@
         </div>
         <div class="slide" id="section8">
             <div class="ommig-container">
-                <img src="images/portaet.webp" alt="portraet">
+                <img loading="lazy" src="images/portaet.webp" alt="portraet">
                 <div class="ommig-container-tekst">
                     <h2>Peter Alexander Møller-Rasmussen</h2>
                     <br>
@@ -430,13 +430,13 @@
                 </div>
                 <div class="footersocials">
                     <a href="https://www.facebook.com/Peter8D" target="_blank">
-                        <img src="images/facebook.webp" alt="facebook">
+                        <img loading="lazy" src="images/facebook.webp" alt="facebook">
                     </a>
                     <a href="https://www.instagram.com/petermoellerrasmussen/" target="_blank">
-                        <img src="images/instagram.webp" alt="instagram">
+                        <img loading="lazy" src="images/instagram.webp" alt="instagram">
                     </a>
                     <a href="https://www.linkedin.com/in/peter-m%C3%B8ller-rasmussen-032169b4/" target="_blank">
-                        <img src="images/linkedin.webp" alt="linkedin">
+                        <img loading="lazy" src="images/linkedin.webp" alt="linkedin">
                     </a>
                 </div>
 
