--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                 <p>Her kan I se et udvalg af mine projekter fra 1. semester på KEA Multimediedesigner</p>
                 <br>
                 <button class="roedknap" onclick="scrollToSection('section1')">Projekter</button>
+                <label for="light-mode">Save power?</label>
+                <input type="checkbox" id="light-mode">
             </div>
         </div>
 
